--- a/static/css/modules/layout.css
+++ b/static/css/modules/layout.css
@@ -280,6 +280,15 @@
     border-bottom-color: var(--primary-color);
 }
 
+/* Device Management Section - Taller than other sections */
+.settings-section:nth-child(2) .fused-card-content {
+    min-height: 450px;
+}
+
+.groups-list {
+    max-height: 380px;
+}
+
 /* Tablet: 2 columnas */
 @media (max-width: 1400px) {
     .settings-layout {
