style: remove justify-content and compact-switch styles
- Remove justify-content: space-between from .toast-config-row
- Remove all .theme-switch.compact-switch styles (now uses default .theme-switch)
- Update HTML to use theme-switch instead of theme-switch compact-switch
- Toast and MQTT clean session switches now match backup switch style

--- a/templates/config.html
+++ b/templates/config.html
@@ -68,7 +68,7 @@
                         <div class="toast-config-inline">
                             <div class="toast-config-row">
                                 <label for="toastEnabled">Habilitar Toast</label>
-                                <label class="theme-switch compact-switch">
+                                <label class="theme-switch">
                                     <input type="checkbox" id="toastEnabled" checked aria-label="Habilitar notificaciones toast">
                                     <span class="slider"></span>
                                 </label>
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="mqtt-options-row">
-                    <label class="theme-switch compact-switch">
+                    <label class="theme-switch">
                         <input type="checkbox" id="mqttCleanSession" checked aria-label="Limpiar sesion al conectar">
                         <span class="slider"></span>
                     </label>
