--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="tasks-list" id="tasksList">
-        <div class="empty-state">⏰<br>No hay tareas programadas. Conectate a un servidor para gestionarlas.</div>
+        <div class="empty-state">⏰<br>No hay tareas programadas. Conéctate a un servidor para gestionarlas.</div>
     </div>
 
     <div class="triggers-list" id="triggersList">
